bugfix: component blocks work with traits

--- a/src/index.css
+++ b/src/index.css
@@ -19,88 +19,8 @@ code {
     monospace;
 }
 
-
-elections-candidates,
-elections-tab,
-group-tab,
-grouped-candidate-display,
-inner-tab-content,
-inner-tab-header,
-inner-tabs-container,
-tab-content,
-tab-header,
-tabs-container,
-candidate-display,
-profile-card-layout,
-profile-card,
-loading-spinner,
-lazy-image,
-scroll-observer,
-flex-container,
-varsity-landing,
-profile-tabs,
-candidate-upload,
-cloudinary-app,
-events-listing,
-project-card,
-add-varsity-scores,
-campaign-tabs,
-video-gallery-stacked,
-get-involved,
-create-varsity-data,
-page-banner,
-project-socials,
-video-gallery,
-profile-logo-card,
-project-image,
-campaign-aim,
-elections-footer,
-kclsu-search,
-quick-links,
-show-support,
-varsity-weather,
-desktop-hide,
-grid-landing,
-grid-landing-item,
-kclsu-countdown,
-mobile-hide,
-my-component,
-primary-button,
-project-page,
-quick-link,
-support-option,
-support-progress,
-full-bio,
-gallery-thumbnail-stacked,
-fullwidth-beige-strip,
-project-heading,
-fullwidth-strip,
-gallery-thumbnail,
-purple-button,
-text-card,
-project-card-events,
-image-text,
-user-login,
-varsity-next-matches,
-preset-controls,
-preset-card,
-video-embed,
-news-card,
-campaign-news,
-kclsu-tabs-container,
-page-content,
-kclsu-button,
-label-card,
-kclsu-modal,
-modal-backdrop,
-varsity-upcoming,
-last-year-scores,
-varsity-total-score,
-image-fit-container,
-image-slider-auto,
-varsity-race {
-  visibility: visible !important;
-  ;
+kclsu-button {
+  visibility: unset !important;
 }
 
 /* Let's highlight canvas boundaries */
